--- a/styles.css
+++ b/styles.css
@@ -92,3 +92,19 @@ nav ul li a {
     text-decoration: none;
     font-size: 16px;
 }
+.banner {
+    background-image: url('https://via.placeholder.com/1200x300');
+    background-size: cover;
+    background-position: center;
+    color: white;
+    text-align: center;
+    padding: 50px 20px;
+}
+
+.banner h1 {
+    font-size: 36px;
+}
+
+.banner p {
+    font-size: 20px;
+}
