--- a/styles.css
+++ b/styles.css
@@ -122,3 +122,27 @@ nav ul li a {
     font-size: 18px;
     color: #333;
 }
+.contact {
+    padding: 50px 20px;
+    background-color: #f4f4f4;
+    text-align: center;
+}
+
+.contact h2 {
+    font-size: 28px;
+}
+
+.contact p {
+    font-size: 18px;
+    color: #333;
+}
+
+.contact ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.contact li {
+    font-size: 18px;
+    margin: 10px 0;
+}
